--- a/MyMVCApplication/Views/Home/Index.cshtml
+++ b/MyMVCApplication/Views/Home/Index.cshtml
@@ -1,31 +1,336 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@using System.Web.Mvc.Html
+@using MyMVCApplication.Models
+@using WebGrease.Css.ImageAssemblyAnalysis
+@model IEnumerable<MyMVCApplication.Models.ProjectInfo>
+
+@{
+    ViewBag.Title = "Build Dashboard";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<h2>Build Dashboard</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+@if(Model==null)
+{
+    <p>
+        <h3>Please Pass Valid Project ID as Query String</h3>
+    </p>
+}
+else
+{
+    <div class="flex-container-proj">
+        @foreach (var item in Model)
+        {
+        foreach (var buildconfig in item.BuildConfigsInfo)
+        {
+            <div class="flex-container-buildconfig">
+                <div style="flex: 0 0 300px">
+                    @if (!buildconfig.CurrentBuildIsSuccesfull)
+                    {
+                        <div id="teammates" class="widget">
+                            <h3>
+                                @item.Name<span class="collapse k-icon k-i-arrowhead-n"></span>
+                        </h3>
+                        <div>
+                            <div class="team-mate">
+                                <a href="@buildconfig.Url" target="_blank">
+                                    <img src="@Url.Content("~/images/TeamCity.png")" alt="TeamCIty">
+                                </a>
+                                <h3>@buildconfig.Name</h3>
+                                <p>IsBuildSuccess: @buildconfig.CurrentBuildIsSuccesfull</p>
+                                <p>Build Date: @buildconfig.CurrentBuildDate</p>
+                                <p>CommittedBy: @buildconfig.BuildCommitedBy</p>
+                                <a href="@buildconfig.Url" target="_blank">TeamCity</a>
+                            </div>
+                        </div>
+                    </div>
+                    }
+                </div>
+            </div>
+        }
+        @*for (int i=0; i<=2; i++)
+            {
+                <div id="teammates" class="widget">
+                    <h3>Teammates <span class="collapse k-icon k-i-arrowhead-n"></span></h3>
+                    <div>
+                        <div class="team-mate">
+                            <img src="@Url.Content("~/content/web/panelbar/andrew.jpg")" alt="Alt text">
+                            <h4>Ra Ja</h4>
+                            <p>Team Lead</p>
+                        </div>
+                    </div>
+                </div>
+            }*@
+        }
+    </div>
+
+}
+
+@*<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Url)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IconUrl)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastBuildDate)
+        </th>
+        <th></th>
+    </tr>
+    
+    @if (Model == null)
+    {
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            <h3>Please Pass Valid Project ID as Query String</h3>
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    }
+    else
+    {
+        foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Url)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IconUrl)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastBuildDate)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                </td>
+            </tr>
+        }
+    }
+
+</table>*@
+
+<style>
+    #example {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+
+    .dash-head {
+        width: 300px;
+        height: 80px;
+        background: url('@Url.Content("~/content/web/sortable/dashboard-head.png")') no-repeat 50% 50% #222222;
+    }
+
+    .panel-wrap {
+        display: table;
+        margin: 0 0 20px;
+        width: 300px;
+        background-color: #ff3333;
+        border: 1px solid #e5e5e5;
+    }
+
+    #sidebar {
+        display: table-cell;
+        margin: 0;
+        padding: 20px 0 20px 20px;
+        width: 220px;
+        vertical-align: top;
+    }
+
+    .flex-container-proj {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    #main-content {
+        display: table-cell;
+        margin: 0;
+        padding: 20px;
+        width: 300px;
+        vertical-align: top;
+    }
+
+    .widget.placeholder {
+        opacity: 0.4;
+        border: 1px dashed #a6a6a6;
+    }
+
+    .flex-container-buildconfig {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    /* WIDGETS */
+    .widget {
+        margin: 0 0 20px;
+        padding: 0;
+        background-color: #ff3333;
+        border: 1px solid #e7e7e7;
+        border-radius: 3px;
+        cursor: move;
+    }
+
+    .widget:hover {
+        background-color: #fcfcfc;
+        border-color: #cccccc;
+    }
+
+    .widget div {
+        padding: 10px;
+        min-height: 50px;
+    }
+
+    .widget h3 {
+        font-size: 12px;
+        padding: 8px 10px;
+        text-transform: uppercase;
+        border-bottom: 1px solid #e7e7e7;
+    }
+
+    .widget h3 span {
+        float: right;
+    }
+
+    .widget h3 span:hover {
+        cursor: pointer;
+        background-color: #e7e7e7;
+        border-radius: 20px;
+    }
+
+    /* PROFILE */
+    .profile-photo {
+        width: 80px;
+        height: 80px;
+        margin: 10px auto;
+        border-radius: 100px;
+        border: 1px solid #e7e7e7;
+        background: url('@Url.Content("~/content/web/Customers/ISLAT.jpg")') no-repeat 50% 50%;
+    }
+
+    #profile div {
+        text-align: center;
+    }
+
+    #profile h4 {
+        width: auto;
+        margin: 0 0 5px;
+        font-size: 1.2em;
+        color: #1f97f7;
+    }
+
+    #profile p {
+        margin: 0 0 10px;
+    }
+
+    /* BLOGS & NEWS */
+    #blogs div,
+    #news div {
+        padding: 0 20px 20px;
+    }
+
+    #teammates h4,
+    #blogs h4,
+    #news h4 {
+        width: auto;
+        margin: 20px 0 2px;
+        font-size: 1.4em;
+        color: #1f97f7;
+        font-weight: normal;
+    }
+
+    .blog-info {
+        margin: 0 0 10px;
+        font-size: .9em;
+        color: #787878;
+    }
+
+    #sidebar #blogs h4 {
+        font-size: 1em;
+    }
+
+    #sidebar #blogs p {
+        display: none;
+    }
+
+    #sidebar #blogs .blog-info {
+        display: block;
+    }
+
+    #main-content #news h4 {
+        font-size: 1.2em;
+        line-height: 1.4em;
+        height: 40px;
+    }
+
+    #main-content #news h4 span {
+        display: block;
+        float: left;
+        width: 100px;
+        height: 40px;
+        color: #000;
+    }
+
+    #sidebar #news h4 {
+        font-size: 1em;
+    }
+
+    #sidebar #news h4 span {
+        display: block;
+        margin-bottom: 3px;
+        color: #000;
+    }
+
+    /* TEAMMATES */
+    .team-mate:after {
+        content: ".";
+        display: block;
+        height: 0;
+        line-height: 0;
+        clear: both;
+        visibility: hidden;
+    }
+
+    #teammates .team-mate h4 {
+        font-size: 1.4em;
+        font-weight: normal;
+        margin-top: 12px;
+    }
+
+    .team-mate p {
+        margin: 0;
+    }
+
+    .team-mate img {
+        float: left;
+        margin: 0 15px 0 0;
+        border: 1px solid #e7e7e7;
+        border-radius: 60px;
+    }
+
+    .hint {
+        width: 250px;
+        height: 100px;
+        overflow: hidden;
+    }
+
+    .hint > h3 {
+        padding-left: 20px;
+    }
+</style>
+
